# goodrobot.net

./: .eslintrc  .gitignore  .gitmodules  Guardfile  Pipfile  README.md  _config.yml  about.markdown  atom.xml  autobuild.rb  build.py  config.rb  fabfile.py  go.sh  index.html  motd.json  motd.py  package.json  pelicanconf.py  projects.markdown  publishconf.py  pyproject.toml  requirements.txt  solar.css  solar.html  tricks.yaml  watch.py
_drafts/: 2011-11-30-using-a-decorator.markdown  2012-01-08-camping-with-ruby.markdown
_includes/: footer.html  header.html  navigation.html
_layouts/: base.html  page.html  post.html  tag_index.html
_posts/: 2011-05-07-goodrobot-badhuman.markdown  2011-06-20-you-never-know.markdown  2011-11-30-using-a-decorator.markdown  2012-01-01-luggage-a-simple-way-share-files.markdown  2012-01-13-camping-with-ruby.markdown
_sass/: 1140.scss  css3.scss  screen.scss  small.scss  util.scss
help/: autobuild.rb  build.sh  index.html
pages/: about.md  projects.md
posts/: 2012-01-01-luggage-a-simple-way-share-files.markdown  2012-01-13-camping-with-ruby.markdown
resume/: Jamie Cantrell Resume Community Manager.docx  index.html  print.html  resume-print.css  resume.css  resume.js  styles.css
src/: about.md  browserconfig.xml  care.md  feed.xml.j2  index.html  index.html.j2  manifest.json  podcasts.html.j2  projects.html.j2  projects.md  robots.txt
src/_sass/: _core.sass  _icons.sass  _theme.sass  _variables.sass  gxl.sass  reboot.sass
src/_tpls/: _post.tpl  base.html.j2  header.html  page-clean.html  page-clean.html.j2  page-lab.html  (+8 more)
(+160 files in other folders)
